--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
                 <h2>Soft Skills</h2>
                 <ul>
                     <li>Team work</li>
-                    <li>Agile</li>
                     <li>Communication</li>
                     <li>Problem-solving</li>
+                    <li>Agile</li>
                     <li>Attention to details</li>
-                    <li>Attention to details</li>
+                    <li>Creativity</li>
                 </ul>
             </div>
     
